feat: add exceptions and commands