@@ -1,63 +1,27 @@
 package com.inventiapp.stocktrack.inventory.domain.model.valueobject;
 
 import jakarta.persistence.Embeddable;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.AccessLevel;
 
 /**
- * Email value object
- *
+ * Value object representing an email address.
  * @summary
- * The Email value object represents an email address used by domain entities
- * (e.g. Provider). It validates format on construction and is immutable.
+ * This value object encapsulates the email of a provider. It validates that the email
+ * is not null, not blank, and follows a basic email pattern.
+ * @param address The email address. It cannot be null, empty, or invalid.
+ * @see IllegalArgumentException
  * @since 1.0
  */
 @Embeddable
-@Getter
-@NoArgsConstructor(access = AccessLevel.PROTECTED)
-public class Email {
+public record Email(String address) {
 
-    private String value;
-
-    /**
-     * Constructs a new Email value object.
-     *
-     * @param value the email address string (non-null, non-empty, valid format)
-     * @throws IllegalArgumentException when value is null/empty or format is invalid
-     */
-    public Email(String value) {
-        if (value == null || value.trim().isEmpty()) {
+    public Email {
+        if (address == null || address.isBlank()) {
             throw new IllegalArgumentException("Email cannot be null or empty");
         }
-        String normalized = value.trim();
-        if (!isValidEmail(normalized)) {
+
+        String regex = "^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$";
+        if (!address.matches(regex)) {
             throw new IllegalArgumentException("Invalid email format");
         }
-        this.value = normalized.toLowerCase();
-    }
-
-    private boolean isValidEmail(String email) {
-        // Simple but practical regex — covers most common cases.
-        // You may replace with stricter validation if needed.
-        return email.matches("^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$");
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof Email)) return false;
-        Email other = (Email) o;
-        return value.equals(other.value);
-    }
-
-    @Override
-    public int hashCode() {
-        return value.hashCode();
-    }
-
-    @Override
-    public String toString() {
-        return value;
     }
 }
